# sanic-healthchecks

./: CHANGELOG.md  README.md  pyproject.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  main.workflow
.github/workflows/: pr.yml  push.yml
examples/: multi.py  simple.py
sanic_healthchecks/: __init__.py  core.py
