[tool.poetry]
name = "sanic-healthchecks"
version = "0.1.0"
description = "A small wrapper for making it easy to add a healthcheck server to your Sanic application"
authors = ["Aaron <AaronBatilo@gmail.com>"]
license = "MIT"
keywords = ['sanic']
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
sanic = "^18.12"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
