[tool.poetry]
name = "sanic-healthchecks"
version = "1.0.1"
description = "A small wrapper for making it easy to add a healthcheck server to your Sanic application"
authors = ["Aaron <AaronBatilo@gmail.com>"]
license = "Apache 2.0"
readme = 'README.md'
homepage = "https://github.com/abatilo/sanic-healthchecks"
repository = "https://github.com/abatilo/sanic-healthchecks"

keywords = ['sanic', 'health', 'checks', 'healthchecks', 'observability']

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
sanic = "^18.12"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
